Updates from Overleaf

--- a/main.bib
+++ b/main.bib
@@ -1106,6 +1106,24 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{2022A&A...657A..17B,
+       author = {{Bachelet}, E. and {Zieli{\'n}ski}, P. and {Gromadzki}, M. and {Gezer}, I. and {Rybicki}, K. and {Kruszy{\'n}ska}, K. and {Ihanec}, N. and {Wyrzykowski}, {\L}. and {Street}, R.~A. and {Tsapras}, Y. and {Hundertmark}, M. and {Cassan}, A. and {Harbeck}, D. and {Rabus}, M.},
+        title = "{A spectroscopic follow-up for Gaia19bld}",
+      journal = {\aap},
+     keywords = {gravitational lensing: micro, techniques: spectroscopic, stars: fundamental parameters, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Astrophysics of Galaxies},
+         year = 2022,
+        month = jan,
+       volume = {657},
+          eid = {A17},
+        pages = {A17},
+          doi = {10.1051/0004-6361/202039548},
+archivePrefix = {arXiv},
+       eprint = {2112.01676},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2022A&A...657A..17B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 
 
