Updates from Overleaf

--- a/main.bib
+++ b/main.bib
@@ -790,16 +790,17 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{1965ApJ...141...83E,
-       author = {{Eggen}, O.~J. and {Greenstein}, J.~L.},
-        title = "{Spectra, colors, luminosities and motions of the white dwarfs .}",
+@ARTICLE{1983ApJ...266..713O,
+       author = {{Oke}, J.~B. and {Gunn}, J.~E.},
+        title = "{Secondary standard stars for absolute spectrophotometry.}",
       journal = {\apj},
-         year = 1965,
-        month = jan,
-       volume = {141},
-        pages = {83-108},
-          doi = {10.1086/148091},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/1965ApJ...141...83E},
+     keywords = {Reference Stars, Spectral Energy Distribution, Stellar Spectrophotometry, Subdwarf Stars, Calibrating, Line Spectra, Astronomy},
+         year = 1983,
+        month = mar,
+       volume = {266},
+        pages = {713-717},
+          doi = {10.1086/160817},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1983ApJ...266..713O},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
